# llvm-project

./: index.html
clang/lib/Basic/Targets/: AMDGPU.h  X86.h
clang/lib/CodeGen/: ABIInfoImpl.cpp  CodeGenModule.cpp  TargetInfo.cpp
clang/lib/CodeGen/Targets/: AMDGPU.cpp  NVPTX.cpp  X86.cpp
clang/lib/Driver/ToolChains/: AMDGPU.cpp
clang/test/CodeGen/: expand-va-intrinsic-calls.c  expand-variadic-call.c  variadic-wrapper-removal.c  voidptr-vastart.c
clang/test/CodeGenCXX/: amdgcn-func-arg.cpp  inline-then-fold-variadics.cpp
docs/: profile.sh  summary.txt
docs/coverage/: index.html
libc/cmake/modules/: LLVMLibCObjectRules.cmake  LLVMLibCTestRules.cmake  prepare_libc_gpu_build.cmake
libc/config/gpu/: entrypoints.txt
libc/src/__support/: arg_list.h  integer_to_string.h  libc_assert.h
libc/src/__support/CPP/: atomic.h  string.h  stringstream.h
libc/src/__support/RPC/: rpc.h  rpc_client.cpp  rpc_client.h  rpc_util.h
libc/src/stdio/printf_core/: float_dec_converter.h
libc/startup/gpu/amdgpu/: start.cpp
libc/startup/gpu/nvptx/: start.cpp
libc/test/UnitTest/: LibcTest.cpp  TestLogger.cpp
libc/test/src/__support/: CMakeLists.txt  arg_list_test.cpp  integer_to_string_test.cpp  rpc_process_test.cpp
libc/utils/gpu/loader/: CMakeLists.txt  Loader.h  Server.h
libc/utils/gpu/loader/amdgpu/: Loader.cpp
libc/utils/gpu/loader/nvptx/: Loader.cpp
llvm/cmake/modules/: HandleLLVMOptions.cmake
llvm/include/llvm/: InitializePasses.h
llvm/lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  DesugarVariadics.cpp  ExpandVAIntrinsics.cpp  ValueTypes.cpp
llvm/lib/IR/: AsmWriter.cpp  Instructions.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm/runtimes/: CMakeLists.txt
llvm/test/Other/: new-pm-thinlto-postlink-defaults.ll  new-pm-thinlto-postlink-pgo-defaults.ll  new-pm-thinlto-prelink-defaults.ll
llvm/tools/opt/: NewPMDriver.cpp  opt.cpp
llvm/utils/: prepare-code-coverage-artifact.py
openmp/libomptarget/include/: device.h
openmp/libomptarget/src/: interface.cpp  rtl.cpp
(+3639 files in other folders)
